--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "portal backend",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.js"
+    "start": "node index.js",
+    "build": "npm i"
   },
   "author": "alnnex",
   "license": "ISC",
